--- a/site/index.html
+++ b/site/index.html
@@ -6,6 +6,6 @@
     <title>Hello Corsera</title>
 </head>
 <body>
-    <h1>Hello corsera</h1>
+    <h1>Hello corsera its a great test</h1>
 </body>
 </html>
